[gd_scene load_steps=12 format=3 uid="uid://dsc6yg45446x7"]

[ext_resource type="Script" path="res://scripts/RedecorationLevel/TurnLabel.gd" id="1_s5xym"]
[ext_resource type="Script" path="res://scripts/RedecorationLevel/GameBoard.gd" id="2_aijxb"]
[ext_resource type="Texture2D" uid="uid://drl6ujtbribub" path="res://sprites/RedecorationLevel/Brown Tile.png" id="3_508ce"]
[ext_resource type="Texture2D" uid="uid://d0lr22iivvluj" path="res://sprites/RedecorationLevel/Brown Tile Hilighted.png" id="4_mj6gh"]
[ext_resource type="PackedScene" uid="uid://bcp4r4686wjpc" path="res://scenes/RedecorationLevel/player_1_redecoration.tscn" id="5_puxre"]
[ext_resource type="PackedScene" uid="uid://ca4owim0jx2l7" path="res://scenes/RedecorationLevel/player_2_redecoration.tscn" id="6_txd5c"]
[ext_resource type="PackedScene" uid="uid://b7ek72k1ewfm" path="res://scenes/RedecorationLevel/furniture/spider_plant.tscn" id="7_eb060"]

[sub_resource type="LabelSettings" id="LabelSettings_knwib"]
font_size = 30

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wje77"]
texture = ExtResource("3_508ce")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, -8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_r47rp"]
texture = ExtResource("4_mj6gh")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, -8)

[sub_resource type="TileSet" id="TileSet_h1o5e"]
tile_shape = 1
tile_offset_axis = 1
tile_size = Vector2i(32, 16)
sources/0 = SubResource("TileSetAtlasSource_wje77")
sources/1 = SubResource("TileSetAtlasSource_r47rp")

[node name="RedecorationLevel" type="Node"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(55, -90)
zoom = Vector2(2.14, 2.14)

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="Label" type="Label" parent="Camera2D/CanvasLayer"]
offset_right = 39.0
offset_bottom = 23.0
text = "Mr. Blob's turn!"
label_settings = SubResource("LabelSettings_knwib")
script = ExtResource("1_s5xym")

[node name="GameBoard" type="Node2D" parent="."]
y_sort_enabled = true
position = Vector2(1, 0)
script = ExtResource("2_aijxb")
metadata/_edit_lock_ = true

[node name="TileMap" type="TileMap" parent="GameBoard"]
y_sort_enabled = true
tile_set = SubResource("TileSet_h1o5e")
format = 2
layer_0/name = "floor"
layer_0/y_sort_enabled = true
layer_0/tile_data = PackedInt32Array(-1, 0, 0, -65536, 0, 0, -2, 0, 0, -65537, 0, 0, -65538, 0, 0, -131073, 0, 0, -196608, 0, 0, -131074, 0, 0, -131075, 0, 0, -131072, 0, 0, -65539, 0, 0, -65540, 0, 0, -196607, 0, 0, -131070, 0, 0, -131071, 0, 0, -131077, 0, 0, -131076, 0, 0, -196611, 0, 0, -262147, 0, 0, -196610, 0, 0, -196609, 0, 0, -196612, 0, 0, -196613, 0, 0, -131078, 0, 0, -262139, 0, 0, -262138, 0, 0, -327675, 0, 0, -327676, 0, 0, -393213, 0, 0, -327678, 0, 0, -327679, 0, 0, -262144, 0, 0, -262145, 0, 0, -262146, 0, 0, -262148, 0, 0, -327683, 0, 0, -262142, 0, 0, -262143, 0, 0, -196606, 0, 0, -196605, 0, 0, -196604, 0, 0, -262141, 0, 0, -262140, 0, 0, -327677, 0, 0, -393215, 0, 0, -393216, 0, 0, -327680, 0, 0, -327681, 0, 0, -327682, 0, 0, -262149, 0, 0, -196614, 0, 0, -196615, 0, 0, -393217, 0, 0, -458753, 0, 0, -458752, 0, 0, -458751, 0, 0, -393214, 0, 0, -196616, 0, 0, -262151, 0, 0, -262150, 0, 0, -327685, 0, 0, -327684, 0, 0, -393219, 0, 0, -393218, 0, 0, -524287, 0, 0, -458750, 0, 0, -458749, 0, 0, -393212, 0, 0, -393211, 0, 0, -327674, 0, 0, -327673, 0, 0, -524288, 0, 0, -589823, 0, 0, -524286, 0, 0, -524285, 0, 0, -458748, 0, 0, -458747, 0, 0, -393210, 0, 0, -393209, 0, 0, -327672, 0, 0, -589822, 0, 0, -589821, 0, 0, -524284, 0, 0, -524283, 0, 0, -458746, 0, 0, -458745, 0, 0, -393208, 0, 0, -393207, 0, 0, -655357, 0, 0, -589820, 0, 0, -589819, 0, 0, -524282, 0, 0, -524281, 0, 0, -458744, 0, 0, -458743, 0, 0, -393206, 0, 0, -262153, 0, 0, -262152, 0, 0, -327687, 0, 0, -327686, 0, 0, -393221, 0, 0, -393220, 0, 0, -458755, 0, 0, -458754, 0, 0, -524289, 0, 0, -589824, 0, 0, -655359, 0, 0, -655358, 0, 0, -458741, 0, 0, -458742, 0, 0, -589818, 0, 0, -720893, 0, 0, -655356, 0, 0, -655355, 0, 0, -589817, 0, 0, -524280, 0, 0, -524279, 0, 0, -262154, 0, 0, -327689, 0, 0, -327688, 0, 0, -393223, 0, 0, -393222, 0, 0, -458757, 0, 0, -458756, 0, 0, -524291, 0, 0, -524290, 0, 0, -589825, 0, 0, -655360, 0, 0, -720895, 0, 0, -720894, 0, 0, -786429, 0, 0, -720892, 0, 0, -720891, 0, 0, -655354, 0, 0, -655353, 0, 0, -589816, 0, 0, -589815, 0, 0, -524278, 0, 0, -524277, 0, 0, -458740, 0, 0)
layer_1/name = "back_wall1"
layer_1/y_sort_enabled = true
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(-327690, 0, 0, -393225, 0, 0, -393224, 0, 0, -458759, 0, 0, -458758, 0, 0, -524293, 0, 0, -524292, 0, 0, -589827, 0, 0, -589826, 0, 0, -655361, 0, 0, -720896, 0, 0, -786431, 0, 0, -786430, 0, 0, -851965, 0, 0, -786428, 0, 0, -786427, 0, 0, -720889, 0, 0, -655352, 0, 0, -655351, 0, 0, -589814, 0, 0, -589813, 0, 0, -524276, 0, 0, -720890, 0, 0)
layer_2/name = "back_wall2"
layer_2/y_sort_enabled = true
layer_2/z_index = 2
layer_2/tile_data = PackedInt32Array(-393226, 0, 0, -458761, 0, 0, -458760, 0, 0, -524295, 0, 0, -524294, 0, 0, -589829, 0, 0, -589828, 0, 0, -655363, 0, 0, -655362, 0, 0, -720897, 0, 0, -786432, 0, 0, -851967, 0, 0, -851966, 0, 0, -917501, 0, 0, -851964, 0, 0, -851963, 0, 0, -786426, 0, 0, -786425, 0, 0, -655350, 0, 0, -655349, 0, 0, -589812, 0, 0, -720887, 0, 0, -720888, 0, 0)
layer_3/name = "furniture"
layer_3/y_sort_enabled = true
layer_3/z_index = 3
layer_3/tile_data = PackedInt32Array()
layer_4/name = "front_wall1"
layer_4/y_sort_enabled = true
layer_4/z_index = 5
layer_4/tile_data = PackedInt32Array()
layer_5/name = "front_wall2"
layer_5/y_sort_enabled = true
layer_5/z_index = 6
layer_5/tile_data = PackedInt32Array()
metadata/_edit_lock_ = true

[node name="RedecorationPlayer1" parent="GameBoard" instance=ExtResource("5_puxre")]
tilemap_position = Vector2i(-1, -1)

[node name="RedecorationPlayer2" parent="GameBoard" instance=ExtResource("6_txd5c")]
position = Vector2(128, -64)
tilemap_position = Vector2i(7, -5)

[node name="SpiderPlant" parent="GameBoard" instance=ExtResource("7_eb060")]
position = Vector2(32, -32)
tilemap_position = Vector2i(1, -3)

[node name="Timer" type="Timer" parent="GameBoard"]
wait_time = 4.0
one_shot = true
